# scummgen

./: ContactInformation.md  CurrentStatus.md  Introduction.md  MainPage.md  ProjectHome.md  TechnicalDesign.md  configure.ac
src/: Assembler.cpp  Makefile  Makefile.am  ScummGEN.cpp  ScummGEN.hpp  main.cpp
src/blocks/: AARY.hpp  APAL.cpp  APAL.hpp  BOXD.cpp  BOXD.hpp  BOXM.cpp  BOXM.hpp  CDHD.cpp  CDHD.hpp  CHAR.hpp  COST.cpp  COST.hpp  CYCL.cpp  CYCL.hpp  DCHR.cpp  DCHR.hpp  DCOS.cpp  DOBJ.cpp  DOBJ.hpp  DROO.hpp  DSCR.cpp  ENCD.cpp  EXCD.cpp  EXCD.hpp  GMD.cpp  IMHD.cpp  IMHD.hpp  IMxx.cpp  LECF.hpp  LFLF.cpp  LFLF.hpp  LOFF.cpp  LSCR.cpp  LSCR.hpp  MAXS.cpp  OBCD.cpp  OBIM.cpp  OBNA.cpp  OFFS.cpp  PALS.hpp  (+20 more)
src/blocks/index/: AARY.cpp  AARY.hpp  DCHR.cpp  DCHR.hpp  DOBJ.cpp  DROO.cpp  DROO.hpp  DSCR.cpp  DSCR.hpp  DSOU.cpp  MAXS.cpp  MAXS.hpp  RNAM.cpp
src/blocks/resource/: APAL.hpp  BOXD.hpp  BOXM.cpp  CDHD.cpp  CDHD.hpp  CHAR.cpp  COST.cpp  COST.hpp  CYCL.hpp  ENCD.cpp  ENCD.hpp  EXCD.hpp  IMHD.hpp  IMxx.cpp  LECF.cpp  LECF.hpp  LFLF.cpp  LFLF.hpp  LOFF.hpp  LSCR.cpp  LSCR.hpp  NLSC.cpp  OBCD.hpp  OBIM.cpp  OBIM.hpp  OBNA.cpp  OBNA.hpp  OFFS.cpp  OFFS.hpp  PALS.cpp  PALS.hpp  RMHD.hpp  RMIH.cpp  RMIH.hpp  RMIM.cpp  ROOM.cpp  ROOM.hpp  SCAL.cpp  SCRP.cpp  SCRP.hpp  (+6 more)
src/blocks/voice/: SOU.cpp  SOU.hpp  VCTL.cpp  VCTL.hpp  VOC.cpp
src/grammar/: Context.cpp  Context.hpp  Declaration.hpp  Expression.cpp  Expression.hpp  Function.cpp  Instruction.cpp  Instruction.hpp  Statement.cpp  Statement.hpp  lexer.ll  parser.yy  scummgen.l
src/libscumm/: Object.sgc  Sound.sgc  Util.sgc  Verb.sgc  vars.sgc
src/types/: Charset.cpp  Charset.hpp  Costume.cpp  Costume.hpp  Cycle.hpp  Game.cpp  Game.hpp  Image.cpp  Image.hpp  Makefile.am  Map.cpp  Map.hpp  Midi.cpp  Midi.hpp  Object.cpp  Object.hpp  Palette.cpp  Palette.hpp  Room.cpp  Room.hpp  Script.cpp  Script.hpp  Voice.cpp  Voice.hpp
src/util/: BMPFile.cpp  BMPFile.hpp  IO.cpp  IO.hpp  Log.cpp  Log.hpp  MIDFile.hpp  Makefile.am  WAVFile.hpp  XMLFile.cpp  XMLFile.hpp
trunk/: configure.ac
trunk/src/: Assembler.cpp  Assembler.hpp  Makefile  Makefile.am  ScummGEN.cpp  ScummGEN.hpp  main.cpp
trunk/src/blocks/: AARY.cpp  APAL.cpp  APAL.hpp  BOXD.cpp  BOXD.hpp  BOXM.cpp  BOXM.hpp  CDHD.cpp  CDHD.hpp  CHAR.cpp  CHAR.hpp  COST.cpp  COST.hpp  CYCL.cpp  DCHR.cpp  DCOS.hpp  DOBJ.cpp  DOBJ.hpp  DROO.cpp  DSCR.cpp  DSCR.hpp  DSOU.cpp  DSOU.hpp  ENCD.hpp  GMD.hpp  IMHD.cpp  IMHD.hpp  IMxx.cpp  LECF.cpp  LFLF.hpp  MAXS.cpp  MAXS.hpp  Makefile.am  NLSC.cpp  NLSC.hpp  OBCD.cpp  OBCD.hpp  OFFS.cpp  PALS.cpp  PALS.hpp  (+18 more)
trunk/src/blocks/index/: AARY.hpp  DCHR.cpp  DCHR.hpp  DCOS.cpp  DCOS.hpp  DOBJ.cpp  DOBJ.hpp  DROO.cpp  DROO.hpp  DRSC.cpp  DRSC.hpp  DSCR.cpp  DSCR.hpp  DSOU.cpp  DSOU.hpp  MAXS.cpp  MAXS.hpp  RNAM.hpp
trunk/src/blocks/resource/: AKCD.cpp  AKCD.hpp  AKCH.cpp  AKCH.hpp  AKCI.cpp  AKCI.hpp  AKHD.cpp  AKHD.hpp  AKOF.cpp  AKOF.hpp  AKOS.cpp  AKOS.hpp  AKPL.cpp  AKPL.hpp  AKSQ.cpp  AKSQ.hpp  APAL.cpp  BOMP.cpp  BOMP.hpp  BOXD.cpp  BOXD.hpp  BOXM.cpp  BOXM.hpp  BSTR.cpp  BSTR.hpp  CDHD.cpp  CDHD.hpp  CHAR.cpp  CHAR.hpp  COST.cpp  COST.hpp  CYCL.cpp  CYCL.hpp  ENCD.cpp  EXCD.cpp  FRMT.cpp  FRMT.hpp  IMAG.cpp  IMAG.hpp  IMHD.cpp  (+66 more)
trunk/src/blocks/voice/: VCTL.cpp  VCTL.hpp  VOC.cpp  VOC.hpp
trunk/src/grammar/: Context.cpp  Context.hpp  Declaration.cpp  Declaration.hpp  Expression.cpp  Function.cpp  Function.hpp  Instruction.cpp  Instruction.hpp  Makefile.am  Statement.cpp  Statement.hpp  lexer.ll  parser.yy
trunk/src/libscumm/: Actor.sgc  Interface.sgc  Object.sgc  Room.sgc  Script.sgc
trunk/src/types/: Charset.cpp  Charset.hpp  Costume.cpp  Costume.hpp  Cycle.cpp  Game.cpp  Game.hpp  Image.cpp  Image.hpp  Makefile.am  Map.cpp  Map.hpp  Midi.cpp  Midi.hpp  Object.cpp  Object.hpp  Palette.cpp  Palette.hpp  Room.cpp  Room.hpp  Script.cpp  Script.hpp  (+4 more)
wiki/: ContactInformation.wiki  CurrentStatus.wiki  Introduction.wiki  MainPage.wiki  TechnicalDesign.wiki
(+11 files in other folders)
