noinst_LTLIBRARIES = libtypes.la
libtypes_la_SOURCES = Charset.cpp Charset.hpp \
                      Costume.cpp Costume.hpp \
                      Game.cpp Game.hpp \
                      Image.cpp Image.hpp \
                      Map.cpp Map.hpp \
                      Midi.cpp Midi.hpp \
                      Object.cpp Object.hpp \
                      Palette.cpp Palette.hpp \
                      Room.cpp Room.hpp \
                      Voice.cpp Voice.hpp
libtypes_la_CPPFLAGS = -I$(top_srcdir)/src @XML_CFLAGS@
