noinst_LTLIBRARIES = libblocks.la
libblocks_la_SOURCES = AARY.cpp AARY.hpp \
                       APAL.cpp APAL.hpp \
                       BOXD.cpp BOXD.hpp \
                       BOXM.cpp BOXM.hpp \
                       CDHD.cpp CDHD.hpp \
                       CHAR.cpp CHAR.hpp \
                       COST.cpp COST.hpp \
                       CYCL.cpp CYCL.hpp \
                       DCHR.cpp DCHR.hpp \
                       DCOS.cpp DCOS.hpp \
                       DOBJ.cpp DOBJ.hpp \
                       DROO.cpp DROO.hpp \
                       DSCR.cpp DSCR.hpp \
                       DSOU.cpp DSOU.hpp \
                       ENCD.cpp ENCD.hpp \
                       EXCD.cpp EXCD.hpp \
                       IMHD.cpp IMHD.hpp \
                       IMxx.cpp IMxx.hpp \
                       LECF.cpp LECF.hpp \
                       LFLF.cpp LFLF.hpp \
                       LOFF.cpp LOFF.hpp \
                       LSCR.cpp LSCR.hpp \
                       MAXS.cpp MAXS.hpp \
                       NLSC.cpp NLSC.hpp \
                       OBCD.cpp OBCD.hpp \
                       OBIM.cpp OBIM.hpp \
                       OBNA.cpp OBNA.hpp \
                       OFFS.cpp OFFS.hpp \
                       PALS.cpp PALS.hpp \
                       RMHD.cpp RMHD.hpp \
                       RMIH.cpp RMIH.hpp \
                       RMIM.cpp RMIM.hpp \
                       RNAM.cpp RNAM.hpp \
                       ROOM.cpp ROOM.hpp \
                       SCAL.cpp SCAL.hpp \
                       SCRP.cpp SCRP.hpp \
                       SMAP.cpp SMAP.hpp \
                       SOU.cpp SOU.hpp \
                       TRNS.cpp TRNS.hpp \
                       VCTL.cpp VCTL.hpp \
                       VERB.cpp VERB.hpp \
                       VOC.cpp VOC.hpp \
                       WRAP.cpp WRAP.hpp \
                       ZPxx.cpp ZPxx.hpp
libblocks_la_CPPFLAGS = -I$(top_srcdir)/src @XML_CFLAGS@
